Fixed animations from overflowing past footer

--- a/app/assets/stylesheets/components/landing.scss
+++ b/app/assets/stylesheets/components/landing.scss
@@ -6,11 +6,22 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: -2;
+  z-index: -3;
 }
 
 .body-attachment {
-  position: relative;
+  overflow: hidden;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: -2;
+  padding-top: $header-height + 20px;
+
+  .attachment-container {
+    position: relative;
+  }
 }
 
 .landing-cog,
